photofolio-sungju/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photofolio-sungju
  namespace: photofolio-sungju
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photofolio-sungju
  template:
    metadata:
      labels:
        app: photofolio-sungju
    spec:
      containers:
        - name: photofolio-sungju
          image: sungjujjang/photofolio-sungju:20260912-174409
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: photofolio-sungju-service
  namespace: photofolio-sungju
spec:
  selector:
    app: photofolio-sungju
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
